testsuite/tests/letrec-disallowed/float_block_disallowed.ocaml.reference
Line 14, characters 14-24:
    let rec x = [| y; y |] and y = 1. in
                ^^^^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'

